fix logo size on mobile

--- a/style.css
+++ b/style.css
@@ -202,6 +202,10 @@ ul {
   #callcenter {
     margin: 50px 0 !important;
   }
+  .banner-center img {
+    width: 80%;
+    padding: 1em !important;
+  }
 }
 @media screen and (min-width: 576px) {
   .container {
